--- a/financePorject/src/main/resources/application.properties
+++ b/financePorject/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.sql.init.mode = always
 spring.sql.init.schema-locations=classpath:/schema.sql
 spring.sql.init.data-locations=classpath:/storedProcedure.sql,classpath:/data.sql
 spring.sql.init.separator=;;
-spring.sql.init.continue-on-error=false
+spring.sql.init.continue-on-error=true
